added style folder and added fonts

--- a/index.html
+++ b/index.html
@@ -3,7 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Influencer Gear</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <h4 class="nav-logo poppins-bold">Influencer products</h4>
+        <div class="nav-link">
+          <ul>
+            <li><a class="poppins-semibold" href="">Home</a></li>
+            <li><a class="poppins-semibold" href="">Product</a></li>
+            <li><a class="poppins-semibold" href="">Sign up</a></li>
+            <li><a class="poppins-semibold" href="">Log in</a></li>
+            <li>
+              <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+  </body>
 </html>
