--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="display-flex">
         <h4 class="nav-logo poppins-bold">Influencer products</h4>
         <div class="nav-link">
-          <ul>
+          <ul class="display-flex">
             <li><a class="poppins-semibold" href="">Home</a></li>
             <li><a class="poppins-semibold" href="">Product</a></li>
             <li><a class="poppins-semibold" href="">Sign up</a></li>
