--- a/index.html
+++ b/index.html
@@ -32,6 +32,36 @@
           </ul>
         </div>
       </nav>
+
+      <section class="hero-section display-flex">
+        <div class="hero-content">
+          <h1 class="hero-title poppins-bold">
+            Start your Journey as Influencer
+          </h1>
+          <p class="hero-description poppins-semibold">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem
+            vestibulum sed scelerisque eros. Lectus faucibus.
+          </p>
+          <button class="hero-btn display-flex">
+            <span class="poppins-bold">Preebook now</span
+            ><i class="fa-solid fa-arrow-right"></i>
+          </button>
+        </div>
+        <div class="hero-image">
+          <img src="images/main-camera.png" alt="" />
+        </div>
+      </section>
     </header>
+    <section class="icon-container">
+      <div class="icons display-flex">
+        <img src="logos/Alibaba.svg" alt="" />
+        <img src="logos/Amazon.svg" alt="" />
+        <img src="logos/Daraz.pk Logo.svg" alt="" />
+        <img src="logos/Ebay.svg" alt="" />
+        <img src="logos/Rakuten.svg" alt="" />
+        <img src="logos/Walmart.svg" alt="" />
+        <img src="logos/Target.svg" alt="" />
+      </div>
+    </section>
   </body>
 </html>
