designed popular collection section and cards

--- a/index.html
+++ b/index.html
@@ -52,16 +52,205 @@
         </div>
       </section>
     </header>
-    <section class="icon-container">
-      <div class="icons display-flex">
-        <img src="logos/Alibaba.svg" alt="" />
-        <img src="logos/Amazon.svg" alt="" />
-        <img src="logos/Daraz.pk Logo.svg" alt="" />
-        <img src="logos/Ebay.svg" alt="" />
-        <img src="logos/Rakuten.svg" alt="" />
-        <img src="logos/Walmart.svg" alt="" />
-        <img src="logos/Target.svg" alt="" />
-      </div>
-    </section>
+
+    <main>
+      <section class="icon-container">
+        <div class="icons">
+          <img src="logos/Alibaba.svg" alt="" />
+          <img src="logos/Amazon.svg" alt="" />
+          <img src="logos/Daraz.pk Logo.svg" alt="" />
+          <img src="logos/Ebay.svg" alt="" />
+          <img src="logos/Rakuten.svg" alt="" />
+          <img src="logos/Walmart.svg" alt="" />
+          <img src="logos/Target.svg" alt="" />
+        </div>
+      </section>
+
+      <section class="popular-collection">
+        <h4 class="heading poppins-semibold">Popular Collection</h4>
+        <div class="popular-cards">
+          <div class="card">
+            <img src="images/tripod.png" alt="" />
+            <h4 class="card-name poppins-medium">Flex Tripod</h4>
+            <p class="card-price">$50.48</p>
+            <div class="card-rating">
+              <div class="star">
+                <i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </div>
+              <p class="rating-number poppins-regular">4.99</p>
+            </div>
+            <p class="card-description poppins-bold">
+              Wordwide shifting <br />
+              available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/mic.png" alt="" />
+            <h4 class="card-name poppins-medium">microphone</h4>
+            <p class="card-price">$120.25</p>
+            <div class="card-rating">
+              <div class="star">
+                <i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </div>
+              <p class="rating-number poppins-regular">4.99</p>
+            </div>
+            <p class="card-description poppins-bold">
+              Wordwide shifting <br />
+              available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/airpod.png" alt="" />
+            <h4 class="card-name poppins-medium">Airbuds</h4>
+            <p class="card-price">$100.00</p>
+            <div class="card-rating">
+              <div class="star">
+                <i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </div>
+              <p class="rating-number poppins-regular">4.99</p>
+            </div>
+            <p class="card-description poppins-bold">
+              Wordwide shifting <br />
+              available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/drone.png" alt="" />
+            <h4 class="card-name poppins-medium">Drone</h4>
+            <p class="card-price">$980.25</p>
+            <div class="card-rating">
+              <div class="star">
+                <i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </div>
+              <p class="rating-number poppins-regular">4.99</p>
+            </div>
+            <p class="card-description poppins-bold">
+              Wordwide shifting <br />
+              available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/lights.png" alt="" />
+            <h4 class="card-name poppins-medium">Light Setup</h4>
+            <p class="card-price">$1200.00</p>
+            <div class="card-rating">
+              <div class="star">
+                <i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </div>
+              <p class="rating-number poppins-regular">4.99</p>
+            </div>
+            <p class="card-description poppins-bold">
+              Wordwide shifting <br />
+              available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/setup.png" alt="" />
+            <h4 class="card-name poppins-medium">Photoshoot set</h4>
+            <p class="card-price">$820.40</p>
+            <div class="card-rating">
+              <div class="star">
+                <i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </div>
+              <p class="rating-number poppins-regular">4.99</p>
+            </div>
+            <p class="card-description poppins-bold">
+              Wordwide shifting <br />
+              available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/camera.png" alt="" />
+            <h4 class="card-name poppins-medium">Vlogging Camera</h4>
+            <p class="card-price">$1800.80</p>
+            <div class="card-rating">
+              <div class="star">
+                <i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </div>
+              <p class="rating-number poppins-regular">4.99</p>
+            </div>
+            <p class="card-description poppins-bold">
+              Wordwide shifting <br />
+              available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/single-light.png" alt="" />
+            <h4 class="card-name poppins-medium">Green Screen</h4>
+            <p class="card-price">$25.48</p>
+            <div class="card-rating">
+              <div class="star">
+                <i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </div>
+              <p class="rating-number">4.99</p>
+            </div>
+            <p class="card-description poppins-bold">
+              Wordwide shifting <br />
+              available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/action.png" alt="" />
+            <h4 class="card-name poppins-medium">Action Camera</h4>
+            <p class="card-price">$380.00</p>
+            <div class="card-rating">
+              <div class="star">
+                <i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </div>
+              <p class="rating-number poppins-regular">4.99</p>
+            </div>
+            <p class="card-description poppins-bold">
+              Wordwide shifting <br />
+              available <br />
+              Buyers protection possible!
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
