designed popular collection sction and make it responsive for mobile

--- a/index.html
+++ b/index.html
@@ -250,6 +250,9 @@
             </p>
           </div>
         </div>
+        <p class="see-more display-flex poppins-bold">
+          See More <i class="fa-solid fa-arrow-right"></i>
+        </p>
       </section>
     </main>
   </body>
