designed featured products section

--- a/index.html
+++ b/index.html
@@ -254,6 +254,21 @@
           See More <i class="fa-solid fa-arrow-right"></i>
         </p>
       </section>
+
+      <section class="featured-products display-flex">
+        <img class="featured-image" src="images/gear.png" alt="" />
+        <div class="featured-content">
+          <h3 class="poppins-bold">Featured products at one place</h3>
+          <p class="poppins-bold">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
+          </p>
+          <button class="display-flex poppins-bold">
+            Join Now <i class="fa-solid fa-arrow-right"></i>
+          </button>
+        </div>
+      </section>
     </main>
   </body>
 </html>
