designed footer and made all section responsive for small device and large device

--- a/index.html
+++ b/index.html
@@ -270,5 +270,18 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="footer-content">
+        <h4 class="footer-heading poppins-bold">Influencer products</h4>
+        <p class="poppins-bold">Copyright © 2020 influencer products</p>
+        <p class="poppins-bold">All rights reserved</p>
+        <div class="footer-links">
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-dribbble"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-youtube"></i>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
